# thumper

./: .gitignore  README.md
contracts/contracts/: EvenNumber2.sol
contracts/script/: Deploy.s.sol
contracts/tests/: EvenNumber.t.sol
lib/risc0-ethereum/: Cargo.toml
lib/risc0-ethereum/examples/ceremony_contributor/: contributor.receipt  deployment-guide.md
lib/risc0-ethereum/examples/ceremony_contributor/methods/: build.rs
lib/risc0-ethereum/examples/ceremony_contributor/script/: DeployCounter.s.sol
lib/risc0-ethereum/examples/ceremony_initiator/contracts/: ERC20.sol
lib/risc0-ethereum/examples/composition/: Cargo.toml  contributor.receipt
lib/risc0-ethereum/examples/composition/methods/: Cargo.toml
lib/risc0-ethereum/examples/composition/methods/guest/: Cargo.toml
lib/risc0-ethereum/examples/composition/methods/guest/src/: main.rs
lib/risc0-ethereum/examples/composition/src/: main.rs
lib/risc0-ethereum/examples/erc20-counter/: Cargo.lock.unused  Cargo.toml.unused  local.receipt
lib/risc0-ethereum/examples/hello-world/: Cargo.toml
lib/risc0-ethereum/examples/hello-world/methods/: Cargo.toml
lib/risc0-ethereum/examples/hello-world/src/: lib.rs
lib/risc0-ethereum/examples/identity_prover/: deployment-guide.md  local.receipt
lib/risc0-ethereum/examples/identity_prover/apps/: Cargo.toml
lib/risc0-ethereum/examples/set_initializer/: Cargo.toml
lib/risc0-ethereum/examples/set_initializer/contributor_receipts/: local.receipt  local2.receipt
lib/risc0-ethereum/examples/set_initializer/methods/guest/: Cargo.toml
lib/risc0-ethereum/examples/set_initializer/methods/guest/src/: main.rs
lib/risc0-ethereum/examples/set_initializer/src/: main.rs
lib/risc0-ethereum/view-call/src/: mpt.rs
lib/zk-kyc/app/: pnpm-lock.yaml
offchain/ceremony-contributor/host/src/: main.rs
offchain/ceremony-contributor/methods/guest/: Cargo.toml
offchain/ceremony-contributor/methods/guest/src/: main.rs
offchain/ceremony-initiator/host/: Cargo.toml
offchain/ceremony-initiator/host/src/: main.rs
offchain/ceremony-initiator/methods/guest/: Cargo.toml
offchain/ceremony-initiator/methods/guest/src/: main.rs
offchain/identity-aggregator/host/src/: main.rs
offchain/identity-aggregator/methods/guest/: Cargo.toml
offchain/identity-attestor/host/src/: main.rs
offchain/identity-attestor/methods/guest/: Cargo.toml
(+14 files in other folders)
