[package]
name = "ceremony_contributor"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false }
bls12_381 = { version  = "0.8.0", default-features = false }